# CppLightGBM

./: CMakeLists.txt  README.md  lightGBM_demo.cpp
LightGBM/include/LightGBM/: arrow.h  arrow.tpp  bin.h  boosting.h  c_api.h  config.h  dataset.h  dataset_loader.h  feature_group.h  metric.h  network.h  objective_function.h  sample_strategy.h  train_share_states.h  tree.h  tree_learner.h
LightGBM/include/LightGBM/cuda/: cuda_algorithms.hpp  cuda_column_data.hpp  cuda_metadata.hpp  cuda_metric.hpp  cuda_objective_function.hpp  cuda_random.hpp  cuda_row_data.hpp  cuda_split_info.hpp  cuda_tree.hpp  cuda_utils.hu  vector_cudahost.h
LightGBM/include/LightGBM/utils/: binary_writer.h  byte_buffer.h  common.h  file_io.h  json11.h  log.h  openmp_wrapper.h  random.h  threading.h
data/: config.conf  test.txt  train.txt  train_with_feature_name.txt  valid.txt
